--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,8 @@
     ~/.vimrc: vimrc
     ~/.tmux: tmux
     ~/.tmux.conf: tmux.conf
+    ~/.gitconfig: gitconfig
+    ~/.gitignore_global: gitignore_global
     ~/.hushlogin: hushlogin
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
